# ITMO

./: .gitmodules  README.md
prog-intro/: README.md
prog-intro/HW-10/expression/: AbstractOperation.java  Add.java  Const.java  Divide.java  Multiply.java  Subtract.java  Variable.java
prog-intro/HW-11/expression/: AbstractUnaryOperation.java  And.java  Const.java  Subtract.java  UnaryMinus.java  Xor.java
prog-intro/HW-12/expression/: AbstractComponent.java  AbstractOperation.java  Add.java  Divide.java  Main.java  (+4 more)
prog-intro/HW-2/: SumFloat.java
prog-intro/HW-3/: Reverse.java  ReverseMin.java
prog-intro/HW-4/: WordStatInput.java  WordStatInputPrefix.java  WordStatInputShingles.java
prog-intro/HW-5/: Reverse.java  ReverseAbc.java  Scanner.java
prog-intro/HW-6/: IntList.java  Scanner.java  WordStatIndex.java  WordStatSortedLineIndex.java
prog-intro/HW-7/: Main.java
prog-intro/HW-8/: TaskA.java  TaskB.java  TaskC.java  TaskD.java  TaskE.java  TaskH.java  TaskI.java  TaskJ.java  TaskK.java  TaskM.java
semester-1/prog-intro/: README.md
semester-2/cpp/seam-carving-priamoryki-master/: .gitmodules  CMakeLists.txt  README.md
semester-2/cpp/seam-carving-priamoryki-master/include/: Image.h  SeamCarver.h
semester-2/cpp/seam-carving-priamoryki-master/src/: Image.cpp  SeamCarver.cpp  main.cpp
semester-2/cpp/seam-carving-priamoryki-master/test/: CMakeLists.txt  README.md
semester-2/cpp/seam-carving-priamoryki-master/test/src/: test.cpp
semester-2/paradigms/: README.md
semester-4/math-logic/: main.cpp
semester-7/coding-theory/: A.cpp  J.cpp  РЗ.txt
(+1033 files in other folders)
